Add theme-based favicon and update homepage footer
Introduced light and dark favicons that switch based on the selected theme. Enhanced the HomePage with a GitHub footer link and improved layout and styling for better user experience.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      id="theme-favicon"
+      rel="icon"
+      type="image/png"
+      href="/src/assets/light-favicon.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,7 +19,7 @@
       src="https://kit.fontawesome.com/6ed07fb8fe.js"
       crossorigin="anonymous"
     ></script>
-    <title>The Wardrobe</title>
+    <title>The Edit</title>
   </head>
   <body>
     <div id="root"></div>
