Move favicons to public/assets and update paths

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       id="theme-favicon"
       rel="icon"
       type="image/png"
-      href="./src/assets/light-favicon.png"
+      href="/assets/light-favicon.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
